Started on big restructuring of AQUA

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-roms/*
-!roms/lasagna.zed
-
+development.zpk
+data/*
 user/*
-!user/objects/*
-!user/images/*
-!user/documents/*
-!user/downloads/*
-!user/music/*
-!user/videos/*
-
-config/theme.rmf
-config/user.rmf
-
-perm/*
-temp/*
+temp
